# thrumzip

./: .gitignore  Assumptions.md  Cargo.toml  Links.md  README.md  claude_plan.md  plan.md  plan_o3.md  update.ps1
.github/instructions/: cli.instructions.md  general.instructions.md
examples/: check_duplicate_equality.rs  check_presence.rs  count_space_savings.rs  crc32.rs  duck_db_images.rs  extract_files.rs  format_bytes.rs  fzf_demo.rs  perceptual_equality.rs  perceptual_equality_v2.rs  uncompressed_size_calculator.rs  uom_bytes.rs  uom_bytes_eta.rs
src/: command.rs  comparable_image.rs  config.rs  config_command.rs  config_init_command.rs  config_show_command.rs  config_state.rs  count_files.rs  existing_file.rs  gather_existing_files.rs  get_splat_path.rs  get_zips.rs  init_tracing.rs  is_image.rs  lib.rs  main.rs  partition.rs  partition_strategy_unique_crc32.rs  partition_strategy_unique_name.rs  path_inside_zip.rs  path_to_zip.rs  progress.rs  read_entries_from_zips.rs  size_of_thing.rs  sync.rs  sync_ambiguous_entries.rs  sync_unambiguous_entries.rs  zip_entry.rs
src/command/: command.rs  config_command.rs  config_init_command.rs  config_show_command.rs  mod.rs  profile_add_command.rs  profile_command.rs  profile_list_command.rs  profile_show_command.rs  profile_use_command.rs  sync.rs  validate_command.rs
src/metrics/: bytes_per_second.rs  bytes_processed.rs  bytes_remaining.rs  current_time.rs  elapsed_time.rs  estimated_completion_time.rs  estimated_time_remaining.rs  items_per_second.rs  items_processed.rs  metric.rs  mod.rs  percent_complete.rs  (+3 more)
(+10 files in other folders)
