[package]
name = "meta-takeout"
version = "0.1.0"
edition = "2024"

[dependencies]
cloud_terrastodon_user_input = "0.14.0"
color-eyre = "0.6.5"
duckdb = { version = "1.3.0", features = ["bundled"] }
eyre = "0.6.12"
holda = "0.1.0"
humansize = "2.1.3"
image = "0.23.14"
img_hash = "3.2.0"
itertools = "0.14.0"
positioned-io = "0.3.4"
rc-zip = "5.3.1"
rc-zip-tokio = "4.2.6"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "time"] }
uom = "0.37.0"
